--- a/galeria.html
+++ b/galeria.html
@@ -34,25 +34,30 @@
             </nav>
         </div>
     </header>
-  
+    
+    <main>
+        <section class="news">
+            <h1>Galeria</h1>
+            <SECTION1>
+            <div class="flex-cont-gallery">
+                <div><img src="img/gallery/1.jpg"></div>
+                <div><img src="img/gallery/2.jpg"></div>
+                <div><img src="img/gallery/3.jpg"></div>
+                <div><img src="img/gallery/4.jpg"></div>
+                <div><img src="img/gallery/5.jpg"></div>
+            </div>
+            <div class="flex-cont-gallery1">
+                <div><img src="img/gallery/6.jpg"></div>
+                <div><img src="img/gallery/7.jpg"></div>
+                <div><img src="img/gallery/8.jpg"></div>
+                <div><img src="img/gallery/9.jpg"></div>
+                <div><img src="img/gallery/10.jpg"></div>
+            </div>
+            </SECTION1>
+        </section>
+    </main>
 
     <audio src="music/1.mp3" autoplay ></audio>
-<SECTION1>
-    <h1><span class =galpl>GALERIA</span><span class=galeng>GALLERY</span></h1>
-        <div class="flex-cont-gallery">
-        <div><img src="img/gallery/1.jpg"></div>
-        <div><img src="img/gallery/2.jpg"></div>
-        <div><img src="img/gallery/3.jpg"></div>
-        <div><img src="img/gallery/4.jpg"></div>
-        <div><img src="img/gallery/5.jpg"></div>
-    </div>
-        <div class="flex-cont-gallery1">
-        <div><img src="img/gallery/6.jpg"></div>
-        <div><img src="img/gallery/7.jpg"></div>
-        <div><img src="img/gallery/8.jpg"></div>
-        <div><img src="img/gallery/9.jpg"></div>
-        <div><img src="img/gallery/10.jpg"></div>
-    </div>
-</SECTION1>
+
 </body>
 </html>
