--- a/prices.html
+++ b/prices.html
@@ -26,7 +26,7 @@
             <nav class="menu">      
                 <ul>
                     <li><a href="index.html">Strona główna</a></li>
-                    <li><a href="#">Galeria</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
                     <li class="menuactive"><a href="prices.html" class="menuactive">Cennik</a></li>
                     <li><a href="#">Rezerwacja</a></li>
                     <li><a href="#">Kontakt</a></li>
