--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <li class="menuactive"><a class="menuactive" href="index.html">Strona główna</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="prices.html">Cennik</a></li>
-                    <li><a href="#">Rezerwacja</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="booking.html">Rezerwacja</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
@@ -51,8 +51,5 @@
     </main>
 
     <audio src="music/1.mp3" autoplay ></audio>
-	<script src="http://code.jquery.com/jquery-1.6.3.min.js"></script>
-	<script src="assets/js/jquery.shuffleLetters.js"></script>
-    <script src="assets/js/script.js"></script>
 </body>
 </html>
