--- a/prices.html
+++ b/prices.html
@@ -28,8 +28,8 @@
                     <li><a href="index.html">Strona główna</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li class="menuactive"><a href="prices.html" class="menuactive">Cennik</a></li>
-                    <li><a href="#">Rezerwacja</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="booking.html">Rezerwacja</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
