--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 
 <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Hotel California to kameralne miejsce z 10 pokojami dla 20 osób, wyposażonymi w komfortowe łazienki, funkcjonalne meble i TV naziemną.Dogodne położenie na trasie Los Angeles-Las Vegas, niedaleko od Hollywood" />
-     <meta name="keywords" content="hotel, California, noclegi, Hollywood">
-     <meta name="author" content="html-css-js-grupa-6">
-     <title>Hotel California - Contact</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta charset="UTF-8">
+     <title>Hotel California</title>
      <link rel="stylesheet" type="text/css" href="style.css">
+     <link href="https://fonts.googleapis.com/css?family=Nosifer&amp;subset=latin-ext" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
-     <script src = "js/contact.js"></script>
+     <script  src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+     <script src="js/contact.js"></script>
 
+     <script type="text/javascript">
+     $('document').ready(function(){
+          $('main').fadeIn(1500);
+     })
+     </script>
 </head>
-
 <body>
      <div class="background"></div>
-     <header>
-          <div class="logo">
-               <div class="top">
-                    <img src="img/logo.svg" class="site-title">
-                    <nav id="lang-menu">
+     <div class="container">
+          <header>
+               <div class="logo">
+                    <div class="top">
+                         <h1 class="heading">Hotel California Zaprasza</h1>
+                         <img src="img/logo.svg" class="site-title">
+                         <nav id="lang-menu">
+                              <ul>
+                                   <li><a class="pl active" href="#">pl</a></li>
+                                   <li><a class="en" href="#">en</a></li>
+                                   <li><a class="de" href="#">de</a></li>
+                              </ul>
+                         </nav>
+                    </div>
+               </div>
+               <div class="top-menu">
+                    <nav class="menu">
                          <ul>
-                              <li><a class="pl active" href="#">pl</a></li>
-                              <li><a class="en" href="#">en</a></li>
-                              <li><a class="de" href="#">de</a></li>
+                              <li><a href="index.html">Strona główna</a></li>
+                              <li><a href="galeria.html">Galeria</a></li>
+                              <li><a href="prices.html">Cennik</a></li>
+                              <li><a href="booking.html">Rezerwacja</a></li>
+                              <li class="menuactive"><a class="menuactive" href="contact.html">Kontakt</a></li>
                          </ul>
                     </nav>
                </div>
-          </div>
-          <div class="top-menu">
-               <nav class="menu">
-                    <ul>
-                         <li class="menuactive"><a class="menuactive" href="index.html">Strona główna</a></li>
-                         <li><a href="#">Galeria</a></li>
-                         <li><a href="#">Cennik</a></li>
-                         <li><a href="#">Rezerwacja</a></li>
-                         <li><a href="#">Kontakt</a></li>
-                    </ul>
-               </nav>
-          </div>
-     </header>
-     <main class="main">
-          <section class="news">
-               <h2>Hotel California - Contact</h2>
-               <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae temporibus dignissimos ipsam. Eum ducimus, enim explicabo dolore! Quam dolores aspernatur voluptates aliquid amet nihil alias quae, magni similique ex. Voluptatem!</span><span>Numquam cum, ex, mollitia praesentium nemo excepturi maiores vitae quod similique, nostrum odit sapiente asperiores consequuntur. Ad est eum voluptatem. In vel ipsam nemo assumenda suscipit dolorum beatae eius ipsa.</span></p>
+          </header>
+          <main id="main">
+               <section class="news">
+                    <h1>Hotel California - Contact</h1>
+                    <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae temporibus dignissimos ipsam. Eum ducimus, enim explicabo dolore! Quam dolores aspernatur voluptates aliquid amet nihil alias quae, magni similique ex. Voluptatem!</span><span>Numquam cum, ex, mollitia praesentium nemo excepturi maiores vitae quod similique, nostrum odit sapiente asperiores consequuntur. Ad est eum voluptatem. In vel ipsam nemo assumenda suscipit dolorum beatae eius ipsa.</span></p>
+                    <div id="map">
+                         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6509916.957423575!2d-123.79759793610344!3d37.18430344877116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb9fe5f285e3d%3A0x8b5109a227086f55!2sKalifornia%2C+Stany+Zjednoczone!5e0!3m2!1spl!2spl!4v1519657738402"
+                              width="600" height="450" frameborder="0" style="border:0; " allowfullscreen></iframe>
 
-               <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6509916.957423575!2d-123.79759793610344!3d37.18430344877116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb9fe5f285e3d%3A0x8b5109a227086f55!2sKalifornia%2C+Stany+Zjednoczone!5e0!3m2!1spl!2spl!4v1519310568225"
-                         width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-                    <address class="address">
+                         <address class="address">
                     <h4>Hotel California</h4>
                     <p> Sezamkowa Street 21 <br>
                     37-100 Hollywood <br>
@@ -61,27 +67,24 @@
                     californiahotel@cali.us</p>
 
                     </address>
-               </div>
+                    </div>
+                    <form id="contact">
+                         <h1>Skontaktuj się z Nami</h1>
 
-               <form id="contact">
-                    <h1>Skontaktuj się z Nami</h1>
-                    <label >Imie*</label>
-                    <input id="name" type="text" name="name" placeholder="Jan" required>
-                    <label>Nazwisko</label>
-                    <input id="lastName"  type="text" name="name" placeholder="kowalski">
-                    <label>email*</label>
-                    <input id="email" name="name" type="email" placeholder="jankowalski@gmail.com" required>
-                    <label>Wiadomość*</label>
-                    <textarea id="message" name="name" placeholder="Napisz tu wiadomość" required></textarea>
-                    <input id="submit" class="submit" name="submit" type="submit" value="Wyślij">
-
-               </form>
-
-          </section>
-     </main>
-
-     <audio src="music/2.mp3" autoplay />
-
+                              <label>Imie*</label>
+                              <input id="name" class="input" type="text" name="name" placeholder="Jan" required>
+                              <label>Nazwisko</label>
+                              <input id="lastName" class="input" type="text" name="name" placeholder="kowalski">
+                              <label>email*</label>
+                              <input id="email" class="input" name="name" type="email" placeholder="jankowalski@gmail.com" required>
+                              <label>Wiadomość*</label>
+                              <textarea id="message" class="input" name="name" placeholder="Napisz tu wiadomość" required></textarea>
+                         <div>
+                              <input id="submit" class="subform2" name="submit" type="submit" value="Wyślij"></div>
+                    </form>
+               </section>
+          </main>
+          <audio src="music/1.mp3" autoplay />
+     </div>
 </body>
-
 </html>
